--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js package for interacting with Google Cloud Storage in an Adonis.js application",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": ""
   },
   "dependencies": {
     "@google-cloud/storage": "^2.5.0",
